@@ -1,7 +1,7 @@
 #ifndef HWACCELHELPER_HPP
 #define HWACCELHELPER_HPP
 
-typedef unsigned long QMPlay2SurfaceID;
+typedef unsigned int QMPlay2SurfaceID;
 
 #define QMPlay2InvalidSurfaceID ((QMPlay2SurfaceID)-1)
 
@@ -13,8 +13,7 @@ class HWAccelHelper
 public:
 	virtual ~HWAccelHelper() {}
 
-	static int get_buffer( AVCodecContext *codec_ctx, AVFrame *frame );
-	static void release_buffer( AVCodecContext *codec_ctx, AVFrame *frame );
+	static int get_buffer( AVCodecContext *codec_ctx, AVFrame *frame, int flags );
 
 	virtual QMPlay2SurfaceID getSurface() = 0;
 	virtual void putSurface( QMPlay2SurfaceID id ) = 0;
