@@ -1,3 +1,5 @@
+Zmiany w QMPlay2 build 15.06.10:
+
 Zmiany w QMPlay2 build 15.06.06:
 	- większy pasek zmiany rozmiaru okien dla ekranów dotykowych,
 	- zoom na ekranie dotykowym (pinch gesture),
